--- a/index.html
+++ b/index.html
@@ -14,41 +14,35 @@
      <section>
      	<div id="results"></div>
      	<form name="quizForm" onsubmit="return submitAnswers()">
-     	 <h3>Do you wanna fucker by me.</h3>
-          <input type="radio" name="q1" value="a" id="q1a">a. Yes<br>
-          <input type="radio" name="q1" value="b" id="q1b">b. No<br>
-          <input type="radio" name="q1" value="c" id="q1c">c. May be<br>
-          <input type="radio" name="q1" value="d" id="q1d">d. Of course<br>
+     	 <h3>What is sass</h3>
+          <input type="radio" name="q1" value="a" id="q1a">a. Library<br>
+          <input type="radio" name="q1" value="b" id="q1b">b. preprocessor<br>
+          <input type="radio" name="q1" value="c" id="q1c">c. Framework<br>
+          <input type="radio" name="q1" value="d" id="q1d">d. Audio player<br>
 
           <h3>Where is London.</h3>
-          <input type="radio" name="q2" value="a" id="q2a">a. America<br>
-          <input type="radio" name="q2" value="b" id="q2b">b. England<br>
+          <input type="radio" name="q2" value="a" id="q2a">a. England<br>
+          <input type="radio" name="q2" value="b" id="q2b">b. America<br>
           <input type="radio" name="q2" value="c" id="q2c">c. India<br>
           <input type="radio" name="q2" value="d" id="q2d">d. Ireland<br>
 
           <h3>What is jquery</h3>
           <input type="radio" name="q3" value="a" id="q3a">a. Plugin<br>
           <input type="radio" name="q3" value="b" id="q3b">b. video player<br>
-          <input type="radio" name="q3" value="c" id="q3c">c. Library<br>
-          <input type="radio" name="q3" value="d" id="q3d">d. text editor<br>
+          <input type="radio" name="q3" value="c" id="q3c">c. text editor<br>
+          <input type="radio" name="q3" value="d" id="q3d">d. library<br>
 
-          <h3>slajfdlkjflksdj</h3>
-          <input type="radio" name="q4" value="a" id="q4a">a. Yes<br>
-          <input type="radio" name="q4" value="b" id="q4b">b. No<br>
-          <input type="radio" name="q4" value="c" id="q4c">c. May be<br>
-          <input type="radio" name="q4" value="d" id="q4d">d. Of course<br>
+          <h3>What is AngularJs</h3>
+          <input type="radio" name="q4" value="a" id="q4a">a. preprocessor<br>
+          <input type="radio" name="q4" value="b" id="q4b">b. Framework<br>
+          <input type="radio" name="q4" value="c" id="q4c">c. Text editor<br>
+          <input type="radio" name="q4" value="d" id="q4d">d. function<br>
 
-          <h3>Do you wanna fucker by me. </h3>
-          <input type="radio" name="q5" value="a" id="q5a">a. Yes<br>
-          <input type="radio" name="q5" value="b" id="q5b">b. No<br>
-          <input type="radio" name="q5" value="c" id="q5c">c. May be<br>
-          <input type="radio" name="q5" value="d" id="q5d">d. Of course<br>
-
-          <h3>Do you wanna fucker by me. </h3>
-          <input type="radio" name="q1" value="a" id="qa1">a. Yes<br>
-          <input type="radio" name="q2" value="b" id="qa2">b. No<br>
-          <input type="radio" name="q3" value="c" id="qa3">c. May be<br>
-          <input type="radio" name="q3" value="d" id="qa4">d. Of course<br>
+          <h3>what is sublime</h3>
+          <input type="radio" name="q5" value="a" id="q5a">a. video editor<br>
+          <input type="radio" name="q5" value="b" id="q5b">b. image editor<br>
+          <input type="radio" name="q5" value="c" id="q5c">c. vector editor<br>
+          <input type="radio" name="q5" value="d" id="q5d">d. text editor<br>
           <br><br>
      	<input type="submit" value="Submit Answers">
      	</form>
